fix context menu should always be shown in the visible area

--- a/app/assets/stylesheets/content/_context_menu.sass
+++ b/app/assets/stylesheets/content/_context_menu.sass
@@ -39,5 +39,8 @@
     position: absolute
     z-index: 1000
 
+#work-package-context-menu.action-menu
+  position: fixed
+
 .hascontextmenu
   cursor: context-menu
